docker entry update

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DB_HOST=cldox2ktd0002s1a1z0sqa82z
 DB_PORT=3306
 DB_PASSWORD=XeU5IDRZyc8GxilWCr0z5q49
-DB_ROOT_USER=cldox2ktb0001a1s15p1zbs83
+DB_ROOT_USER=cldox2ktc0002a1s183mb0p00
 
 REDIS_CACHE=redis://SgEVW65SPF1hZUmsMF4RWZEh@cld1yrfg7000frpa2aap0swlx:6379/
 REDIS_QUEUE=redis://lz3HprFi0YAv3AQd7RgpEzqj@cld1yvxx9000lrpa2mg8lttuv:6379/
@@ -9,3 +9,5 @@ REDIS_SOCKETIO=redis://6jgHw2sGVbT9lH0jm8kDwUDy@cld1yxbh8000xrpa2o0tc24xp:6379/
 
 FRAPPE_VERSION=version-14
 ERPNEXT_VERSION=version-14
+ADMIN_PASSWORD=admin
+FRAPPE_SITE_NAME_HEADER=site1.local
