docker entry update

--- a/.env
+++ b/.env
@@ -10,4 +10,4 @@ REDIS_SOCKETIO=redis://6jgHw2sGVbT9lH0jm8kDwUDy@cld1yxbh8000xrpa2o0tc24xp:6379/
 FRAPPE_VERSION=version-14
 ERPNEXT_VERSION=version-14
 ADMIN_PASSWORD=admin
-FRAPPE_SITE_NAME_HEADER=site1.local
+FRAPPE_SITE_NAME_HEADER=erp.divinit.ca
